# korean-market-crawler

./: .flake8  .gitignore  .gitmodules  generate.py  pyproject.toml  run.py  run_tests.py  set_node_heap_memory.ps1
market_crawler/: bot.py  cache.py  config.py  crawling.py  data.py  error.py  excel.py  helpers.py  html.py  initialization.py  log.py  memory.py  path.py  settings.py  state.py  template.py
market_crawler/accorn/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/allcap/: .gitignore  app.py  config.py  conftest.py  data.py  subcategories.txt
market_crawler/apis/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/aqus/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/artinus/: .gitignore  LICENSE  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/bagissue/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/ballys/: .gitignore  app.py  config.py  conftest.py  data.py  subcategories.txt
market_crawler/banax/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/blackrhino/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/bnkrod/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/bonniepet/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/campingb2b/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/campingmoon/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/caposports/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/casco/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/corna/: .gitignore  app.py  categories.txt  config.py  conftest.py  data.py
market_crawler/cuscuz/: .gitignore  app.py  config.py  conftest.py  data.py  (+1 more)
playwright_stealth/: README.md  __init__.py  stealth.py
(+806 files in other folders)
